Bug 392153.  Form to file a bug is missing from MSAA tree. r=ginn.chen, a=dsicore